Retinizes backgrounds for tablets

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -48,6 +48,11 @@
       height: 548px;
       background-image: url("../../img/backgrounds/tablet_about.png");
       background-repeat: no-repeat;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../../img/backgrounds/tablet_about@2x.png");
+        background-size: 376px auto;
+      }
     }
   }
 
