--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -33,6 +33,11 @@
 
 .companion-card__avatar {
   display: block;
+
+  @media (min-width: @tablet-width) {
+    width: 285px;
+    height: 285px;
+  }
 }
 
 .companion-card:hover .companion-card__avatar,
