--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -13,6 +13,11 @@
     .move-up(-55px);
     background-image: url("../../img/backgrounds/tablet_companions.png");
     background-position: 35% 126px;
+
+    @media (min-resolution: 2dppx) {
+    background-image: url("../../img/backgrounds/tablet_companions@2x.png");
+    background-size: 654px auto;
+  }
   }
 
   @media (min-width: @desktop-width) {
