--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -5,6 +5,11 @@
     background-image: url("../../img/backgrounds/tablet_flags-back.png");
     background-position: 92% 80px;
     background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+    background-image: url("../../img/backgrounds/tablet_flags-back@2x.png");
+    background-size: 288px auto;
+  }
   }
 
   @media (min-width: @desktop-width) {
