--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -13,6 +13,11 @@
     padding: 162px 0 96px;
     background-image: url("../../img/backgrounds/tablet_traveller-illustration.png"), url("../../img/backgrounds/tablet_globe-back.jpg");
     background-position: 72% 404px, 0% 382px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/backgrounds/tablet_traveller-illustration@2x.png"), url("../../img/backgrounds/tablet_globe-back@2x.jpg");
+      background-size: 372px auto, 100vw auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
