Adds z-indexes for menu on destop and features pseudo

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -65,12 +65,14 @@
 // Menu
 @z-index-top-bar-logo: 6;
 @z-index-menu: 5;
+@z-index-menu-desktop: 2;
 @z-index-menu-toggle: 4;
 @z-index-menu-nojs-user-buttons: 3;
 @z-index-user-buttons-scroll: 2;
 @z-index-top-bar: 6;
 // Index page
 @z-index-promo: 3;
+@z-index-feature-item: 2;
 @z-index-about-rectangle: -1;
 @z-index-companion-card: 1;
 @z-index-companion-card-hover: 2;
