--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -60,6 +60,7 @@
   }
 
   @media (min-width: @tablet-width) {
+    z-index: @z-index-feature-item;
     padding: 31px 33px 61px;
 
     &:first-child {
