Reworks top-bar and its contents

--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -7,6 +7,11 @@
     width: 166px;
     height: 42px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 200px;
+    height: 52px;
+  }
 }
 
 .logo__image {
@@ -15,5 +20,10 @@
   @media (min-width: @tablet-width) {
     width: 166px;
     height: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 200px;
+    height: 52px;
   }
 }
