Retinizes backgrounds on desktop

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -72,6 +72,11 @@
       width: 630px;
       height: 665px;
       background-image: url("../../img/backgrounds/desktop_about.png");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../../img/backgrounds/desktop_about@2x.png");
+        background-size: 630px auto;
+      }
     }
   }
 }
