--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -15,14 +15,19 @@
     background-position: 35% 126px;
 
     @media (min-resolution: 2dppx) {
-    background-image: url("../../img/backgrounds/tablet_companions@2x.png");
-    background-size: 654px auto;
-  }
+      background-image: url("../../img/backgrounds/tablet_companions@2x.png");
+      background-size: 654px auto;
+    }
   }
 
   @media (min-width: @desktop-width) {
     background-image: url("../../img/backgrounds/desktop_companions.png");
     background-position: 60px 125px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/backgrounds/desktop_companions@2x.png");
+      background-size: 630px auto;
+    }
   }
 }
 
