--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -28,7 +28,7 @@
     z-index: 1;
     order: 2;
     width: 559px;
-    border-radius: 0 20px 20px 0;
+    border-radius: 20px 20px 20px 20px;
   }
 }
 
@@ -104,8 +104,8 @@
       height: 47px;
 
       @media (min-resolution: 2dppx) {
-      background-size: 310px auto;
-    }
+        background-size: 310px auto;
+      }
     }
   }
 
