--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -16,12 +16,12 @@
 .rates__title {
   margin-bottom: 25px;
   padding: 16px 110px 15px 25px;
-  background-image: url("../../img/backgrounds/rates.png");
+  background-image: url("../../img/backgrounds/mobile_rates.png");
   background-position: 100% 0;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/backgrounds/rates@2x.png");
+    background-image: url("../../img/backgrounds/mobile_rates@2x.png");
     background-size: 100px 100px;
   }
 
@@ -82,6 +82,11 @@
       background-image: url("../../img/backgrounds/desktop_rates.png");
       background-repeat: no-repeat;
       transform: translateY(-50%);
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../../img/backgrounds/desktop_rates@2x.png");
+        background-size: 198px auto;
+      }
     }
   }
 }
@@ -113,12 +118,12 @@
       display: block;
       width: 100px;
       height: 100px;
-      background-image: url("../../img/backgrounds/rates.png");
+      background-image: url("../../img/backgrounds/mobile_rates.png");
       background-position: 0 0;
       background-repeat: no-repeat;
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../../img/backgrounds/rates@2x.png");
+        background-image: url("../../img/backgrounds/mobile_rates@2x.png");
         background-size: 100px 100px;
       }
     }
