Adds wider margin-bottom

--- a/source/less/blocks/lost.less
+++ b/source/less/blocks/lost.less
@@ -11,10 +11,23 @@
   }
 }
 
+.lost__title {
+  margin-bottom: 19px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 57px;
+  }
+}
+
 .lost__text {
   margin: 0 0 38px;
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 90px;
     padding-right: 440px;
   }
 }
