--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -21,13 +21,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../img/backgrounds/desktop_companions.png");
-    background-position: 60px 125px;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/backgrounds/desktop_companions@2x.png");
-      background-size: 630px auto;
-    }
+    background-image: none;
   }
 }
 
@@ -49,6 +43,14 @@
     grid-gap: 60px;
     grid-row-gap: 0;
     padding: 185px 57px 134px 51px;
+    background-image: url("../../img/backgrounds/desktop_companions.png");
+    background-position: 60px 125px;
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/backgrounds/desktop_companions@2x.png");
+      background-size: 630px auto;
+    }
   }
 }
 
