--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -2,7 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 3;
+  z-index: @z-index-modal;
   display: none;
   box-sizing: border-box;
   min-width: 270px;
@@ -78,6 +78,7 @@
   background-color: @special-grey-light;
   border: 0;
   border-radius: 0 0 20px 20px;
+  cursor: pointer;
 
   &:hover,
   &:focus {
