--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -59,6 +59,7 @@
 @z-index-page-main-light: 3;
 @z-index-page-main-special: 1;
 @z-index-page-main-title-container: 4;
+@z-index-modal: 7;
 @z-index-tooltip: 3;
 @z-index-page-footer: 3;
 @z-index-pseudo-hover: 2;
