--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -41,3 +41,13 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.bg-image(@path, @width, @height) {
+  background-image: url(@path);
+
+  @media (min-resolution: 2dppx) {
+    @retina: replace(@path, "(\.[0-9a-z]+)$", "@2x$1", "i");
+    background-image: url(@retina);
+    background-size: @width @height;
+  }
+}
