--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -2,14 +2,9 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../../img/backgrounds/tablet_flags-back.png");
+    .bg-image("../../img/backgrounds/tablet_flags-back.png", 288px, auto);
     background-position: 92% 80px;
     background-repeat: no-repeat;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/backgrounds/tablet_flags-back@2x.png");
-      background-size: 288px auto;
-    }
   }
 
   @media (min-width: @desktop-width) {
