--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -80,14 +80,9 @@
     display: block;
     width: 35px;
     height: 24px;
-    background-image: url("../../img/flags/flags-sprite.png");
+    .bg-image("../../img/flags/flags-sprite.png", 155px, auto);
     background-size: 155px auto;
     background-repeat: no-repeat;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/flags/flags-sprite@2x.png");
-      background-size: 155px auto;
-    }
   }
 
 
