--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -25,14 +25,9 @@
     position: relative;
     z-index: @z-index-promo;
     padding: 0;
-    background-image: url("../../img/backgrounds/desktop_globe-back.png");
+    .bg-image("../../img/backgrounds/desktop_globe-back.png", 1440px, auto);
     background-position: center top;
     background-color: @basic-blue-other;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/backgrounds/desktop_globe-back@2x.png");
-      background-size: 1440px auto;
-    }
   }
 }
 
@@ -42,14 +37,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 209px 0 123px;
-    background-image: url("../../img/backgrounds/desktop_traveller-illustration.png");
+    .bg-image("../../img/backgrounds/desktop_traveller-illustration.png", 431px, auto);
     background-position: 604px 110px;
     background-repeat: no-repeat;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/backgrounds/desktop_traveller-illustration@2x.png");
-      background-size: 431px auto;
-    }
   }
 }
 
