--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -16,14 +16,9 @@
 .rates__title {
   margin-bottom: 25px;
   padding: 16px 110px 15px 25px;
-  background-image: url("../../img/backgrounds/mobile_rates.png");
+  .bg-image("../../img/backgrounds/mobile_rates.png", 100px, 100px);
   background-position: 100% 0;
   background-repeat: no-repeat;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../../img/backgrounds/mobile_rates@2x.png");
-    background-size: 100px 100px;
-  }
 
   @media (max-width: @mobile-width-only) {
     min-height: 72px;
@@ -79,14 +74,9 @@
       display: block;
       width: 198px;
       height: 198px;
-      background-image: url("../../img/backgrounds/desktop_rates.png");
+      .bg-image("../../img/backgrounds/desktop_rates.png", 198px, auto);
       background-repeat: no-repeat;
       transform: translateY(-50%);
-
-      @media (min-resolution: 2dppx) {
-        background-image: url("../../img/backgrounds/desktop_rates@2x.png");
-        background-size: 198px auto;
-      }
     }
   }
 }
@@ -118,14 +108,9 @@
       display: block;
       width: 100px;
       height: 100px;
-      background-image: url("../../img/backgrounds/mobile_rates.png");
+      .bg-image("../../img/backgrounds/mobile_rates.png", 100px, 100px);
       background-position: 0 0;
       background-repeat: no-repeat;
-
-      @media (min-resolution: 2dppx) {
-        background-image: url("../../img/backgrounds/mobile_rates@2x.png");
-        background-size: 100px 100px;
-      }
     }
   }
 
