--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -61,7 +61,9 @@
 }
 
 .navigation__link {
+  display: inline-block;
   color: @basic-blue-other;
+  overflow: hidden;
 
   &:hover,
   &:focus {
@@ -75,6 +77,24 @@
   @media (min-width: @desktop-width) {
     color: @white;
   }
+}
+
+.navigation__link-text {
+  position: relative;
+  display: inline-block;
+  transition: transform 0.3s ease;
+
+  &::before {
+    content: attr(data-hover);
+    position: absolute;
+    top: 100%;
+    transform: translateY(0);
+  }
+}
+
+.navigation__link:hover .navigation__link-text,
+.navigation__link:focus .navigation__link-text {
+  transform: translateY(-100%);
 }
 
 // On desktop on scroll
