--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -75,6 +75,7 @@
 @z-index-promo: 3;
 @z-index-feature-item: 2;
 @z-index-about-rectangle: -1;
+@z-index-country-list-gradient: 2;
 @z-index-companion-card: 1;
 @z-index-companion-card-hover: 2;
 @z-index-address-container: 2;
