Deletes units for values of 0

--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -37,7 +37,7 @@
 
 .gradient-white(@end) {
   background: svg-gradient(to right, fade(@white, 0%) 0%, @white @end);
-  background-position: 100% 0%;
+  background-position: 100% 0;
   background-size: cover;
   background-repeat: no-repeat;
 }
