Adds gradient for country list

--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -30,6 +30,10 @@
     width: 559px;
     border-radius: 20px 20px 20px 20px;
   }
+
+  @media (min-width: @desktop-width) {
+    right: 0;
+  }
 }
 
 .country-card__container {
