--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -99,6 +99,21 @@
       left: 0;
       width: 140px;
     }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: @z-index-country-list-gradient;
+      display: block;
+      width: 100%;
+      height: 81px;
+      background: svg-gradient(to bottom, fade(@basic-steelblue, 0%) 0%, @basic-steelblue 10%);
+      background-position: 0 0;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
   }
 }
 
