Fixes issue with flags sprite size

--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -101,6 +101,7 @@
       left: unset;
       width: 70px;
       height: 47px;
+      background-size: 310px auto;
 
       @media (min-resolution: 2dppx) {
         background-size: 310px auto;
