--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -1,4 +1,5 @@
 .user-profile {
+  position: relative;
   display: grid;
   grid-template-areas: "badge avatar"
     "button button"
@@ -57,10 +58,11 @@
   }
 }
 
-.user-profile__avatar {
+.user-profile__avatar-container {
   grid-area: avatar;
-  display: block;
-  .circle(100px);
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
 
   @media (min-width: @tablet-width) {
     justify-self: end;
@@ -73,7 +75,18 @@
     justify-self: start;
     width: 190px;
     height: 190px;
-    border-radius: 7px 7px 0 0;
+    border-radius: 15px 15px 0 0;
+  }
+}
+
+.user-profile__avatar {
+  display: block;
+  .circle(100px);
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 }
 
