--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,6 +10,19 @@
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
 @basic-yellow: #FFD74B;
+//UI
+@ui-arrows: #B3B3B3;
+@ui-arrows-hover: #808080;
+@ui-down: #E5E5E5;
+@ui-cross: #D5D7DD;
+@ui-cross-hover: #A6A7AC;
+@ui-cross-down: #E1E3EA;
+@ui-plus: #BEBFC5;
+@ui-plus-hover: #9C9FA8;
+@ui-plus-down: #C9CCD8;
+@ui-pick-cross: #616D8C;
+@ui-pick-cross-down: #34436B;
+@ui-number-button-hover: #999999;
 // Yellows
 @special-yellow-dark: #FFBD30;
 @special-yellow-faded: #F3C72B;
@@ -45,6 +58,7 @@
 // Assorted
 @special-pink: #F9EAEA;
 @special-pink-saturated: #F9D8D8;
+@special-pink-mistake: #FFEFEF;
 @special-green: #81E31E;
 
 // VIEWPORTS
@@ -82,9 +96,10 @@
 @z-index-address-map-container: 1;
 // Form page
 @z-index-user-profile: 5;
+@z-index-checkbox: -1;
 @z-index-calendar-day-hover: 2;
 @z-index-steps-tracker: 3;
-@z-index-country-choice-container: 2;
+@z-index-country-choice-container: 4;
 @z-index-checkbox-kids: 2;
 // Catalog page
 @z-index-filter-country: 3;
