Adds decorative arrows to select-buttons

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,6 +13,7 @@
   background-color: @basic-yellow;
   border: 0;
   border-radius: 25px;
+  cursor: pointer;
 
   &:hover,
   &:focus {
@@ -257,13 +258,66 @@
       background-color: @white;
     }
 
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 20px;
+      z-index: 2;
+      display: block;
+      width: 9px;
+      height: 2px;
+      background-color: @special-grey-ui;
+      border-radius: 20px;
+    }
+
+    &::before {
+      right: 17px;
+      transform: rotate(50deg);
+    }
+
+    &::after {
+      right: 12px;
+      transform: rotate(-50deg);
+    }
+
     @media (min-width: @tablet-width) {
       padding: 27px 25px 21px;
       .fontsize(20px);
+
+      &::before,
+      &::after {
+        top: 33px;
+        width: 11px;
+      }
+
+      &::before {
+        right: 33px;
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        right: 26px;
+        transform: rotate(-45deg);
+      }
     }
 
     @media (min-width: @desktop-width) {
       padding-top: 25px;
+
+      &::before,
+      &::after {
+        top: 34px;
+        width: 15px;
+      }
+
+      &::before {
+        right: 29px;
+      }
+
+      &::after {
+        right: 20px;
+      }
     }
   }
 
@@ -280,9 +334,54 @@
       background-color: @basic-blue-light;
     }
 
+    &:active {
+      color: fade(@white, 10%);
+    }
+
+    &::before,
+    &::after {
+      height: 1px;
+      background-color: @ui-pick-cross;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      right: 17px;
+      transform: rotate(-45deg);
+    }
+
+    &:hover::before,
+    &:hover::after {
+      background-color: @white;
+    }
+
+    &:active::before,
+    &:active::after {
+      background-color: @ui-pick-cross-down;
+    }
+
     @media (min-width: @tablet-width) {
       padding: 23px 25px 21px;
       letter-spacing: 0.1em;
+
+      &::before,
+      &::after {
+        top: 35px;
+        right: 24px;
+        width: 23px;
+        height: 2px;
+      }
+    }
+
+    @media (min-width: @desktop-width) {
+      &::before,
+      &::after {
+        right: 23px;
+        width: 25px;
+      }
     }
   }
 
