--- a/source/less/blocks/number-input.less
+++ b/source/less/blocks/number-input.less
@@ -1,10 +1,10 @@
 .number-input {
   display: grid;
   grid-template-areas: "minus number plus";
-  grid-template-columns: 42px 1fr 42px;
+  grid-template-columns: 41px 1fr 41px;
 
   @media (min-width: @tablet-width) {
-    grid-template-columns: 50px 1fr 50px;
+    grid-template-columns: 65px 1fr 65px;
   }
 
   @media (min-width: @desktop-width) {
@@ -15,26 +15,91 @@
 }
 
 .number-input__button {
+  position: relative;
   box-sizing: border-box;
   padding: 0;
   background-color: @white;
   border: 1px solid @special-grey-border;
 
-  &--minus {
-    grid-area: minus;
-    border-right: 0;
-    border-radius: 4px 0 0 4px;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 14px;
+    height: 2px;
+    background-color: @special-grey-ui;
+    transform: translate(-50%, -50%);
   }
 
   &--plus {
     grid-area: plus;
     border-left: 0;
     border-radius: 0 4px 4px 0;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      display: block;
+      width: 2px;
+      height: 14px;
+      background-color: @special-grey-ui;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  &:hover::before,
+  &:hover::after,
+  &:focus::before,
+  &:focus::after {
+    background-color: @ui-number-button-hover;
+  }
+
+  &:active::before,
+  &:active::after {
+    background-color: @ui-down;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      width: 20px;
+    }
+
+    &::after {
+      height: 20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      left: 2px;
+      transform: translateY(-50%);
+    }
+
+    &::after {
+      left: 11px;
+    }
+  }
+
+  &--minus {
+    grid-area: minus;
+    border-right: 0;
+    border-radius: 4px 0 0 4px;
+
+    @media (min-width: @desktop-width) {
+      &::before {
+        left: 21px;
+      }
+    }
   }
 }
 
 .number-input:hover .number-input__button,
-.number-input:focus .number-input__button {
+.number-input:focus .number-input__button,
+.number-input:focus-within .number-input__button {
   border-color: @special-border-blue-fade;
 }
 
