--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -1,4 +1,5 @@
 .step {
+  display: none;
   padding: 24px 25px 9px;
   background-color: @white;
   border-radius: 10px;
@@ -11,6 +12,14 @@
   @media (min-width: @desktop-width) {
     padding: 101px 162px 106px 159px;
     border-radius: 60px;
+  }
+
+  &--current {
+    display: list-item;
+  }
+
+  &--no-js {
+    display: list-item;
   }
 
   &--no-side-padding {
@@ -31,14 +40,19 @@
   }
 
   &--second {
+    @media (min-width: @desktop-width) {
+      padding-top: 99px;
+      padding-bottom: 105px;
+    }
+  }
+
+  &--second-no-js {
     @media (min-width: @tablet-width) {
       margin-bottom: 51px;
     }
 
     @media (min-width: @desktop-width) {
       margin-bottom: 43px;
-      padding-top: 99px;
-      padding-bottom: 105px;
     }
   }
 
