Renames link to text in classes

--- a/source/less/blocks/steps-tracker.less
+++ b/source/less/blocks/steps-tracker.less
@@ -73,7 +73,7 @@
   }
 }
 
-.steps-tracker__link {
+.steps-tracker__text {
   display: none;
   font-weight: 400;
   font-size: 20px;
@@ -90,6 +90,6 @@
   }
 }
 
-.steps-tracker__item--current .steps-tracker__link {
+.steps-tracker__item--current .steps-tracker__text {
   opacity: 1;
 }
