--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,7 +8,7 @@
   border: 1px solid @special-grey-border;
   border-radius: 10px;
 
-  :last-of-type {
+  &:last-of-type {
     margin-bottom: 0;
   }
 
