--- a/source/less/blocks/select-country.less
+++ b/source/less/blocks/select-country.less
@@ -571,7 +571,7 @@
   list-style: none;
 
   @media(max-width: @mobile-width-only) {
-    height: 230px;
+    max-height: 230px;
     padding: 13px 18px 10px;
     overflow-y: auto;
   }
