Makes blue logo visible if there's no JS

--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -89,7 +89,8 @@
 
 // Switch logos on states
 .top-bar--menu-open .top-bar__logo-image,
-.top-bar--scroll .top-bar__logo-image {
+.top-bar--scroll .top-bar__logo-image,
+.top-bar--no-js .top-bar__logo-image {
   &--white {
     display: none;
   }
