Adds z-index for filter-country tabs without js

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -105,4 +105,5 @@
 @z-index-filter-country: 3;
 @z-index-filter-country-menu: -1;
 @z-index-filter-country-tabs: -1;
+@z-index-filter-country-tabs-nojs: 1;
 @z-index-number-input-decor: 2;
