--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -25,6 +25,12 @@
   }
 }
 
+.filter-country--no-js .filter-country__tabs-container {
+  @media (max-width: @tablet-width-only) {
+    border-radius: 0;
+  }
+}
+
 .filter-country__wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -123,6 +129,19 @@
   display: flex;
 }
 
+.filter-country--no-js .filter-country__tabs {
+  position: relative;
+  top: 31px;
+  z-index: @z-index-filter-country-tabs-nojs;
+  display: flex;
+  padding: 0 25px;
+
+  @media (min-width: @tablet-width) {
+    top: 0;
+    padding: 0;
+  }
+}
+
 .filter-country__tab {
   margin-bottom: 5px;
   opacity: 0.3;
@@ -187,6 +206,10 @@
   }
 }
 
+.filter-country--no-js .filter-country__button {
+  display: none;
+}
+
 .filter-country__button-text {
   @media (min-width: @tablet-width) {
     display: inline-block;
@@ -240,6 +263,16 @@
   display: block;
 }
 
+.filter-country--no-js .filter-country__menu {
+  position: relative;
+  top: 0;
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    top: -4px;
+  }
+}
+
 .filter-country__menu-wrapper {
   padding: 26px 25px 28px;
 
@@ -251,6 +284,19 @@
 
   @media (min-width: @desktop-width) {
     padding: 17px 60px 80px;
+  }
+}
+
+.filter-country--no-js .filter-country__menu-wrapper {
+  padding-top: 39px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 0;
+    padding-bottom: 39px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 21px;
   }
 }
 
@@ -274,6 +320,10 @@
   }
 }
 
+.filter-country--no-js .filter-country__choice-container {
+  margin-bottom: 0;
+}
+
 .filter-country__first-letters {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -286,6 +336,10 @@
   @media (min-width: @desktop-width) {
     display: none;
   }
+}
+
+.filter-country--no-js .filter-country__first-letters {
+  margin-bottom: 15px;
 }
 
 .filter-country__first-letter {
@@ -305,16 +359,16 @@
       position: absolute;
       top: -1px;
       left: -1px;
-      z-index: @z-index-pseudo-hover;
-      display: none;
+      display: block;
       box-sizing: border-box;
-      width: ~"calc(100% + 2px)";
-      height: ~"calc(100% + 2px)";
+      width: ~"calc(100% + 1px)";
+      height: ~"calc(100% + 1px)";
       border: 1px solid @special-grey-border;
     }
 
     &:hover::before,
     &:focus::before {
+      z-index: @z-index-pseudo-hover;
       display: block;
       border-color: @basic-blue-light;
     }
@@ -452,4 +506,8 @@
       margin-right: 11px;
     }
   }
+}
+
+.filter-country--no-js .filter-country__close {
+  display: none;
 }
