--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -5,6 +5,8 @@
   color: @special-grey;
   background-color: @white;
   border-radius: 10px;
+  filter: drop-shadow(0 0 0 fade(@black, 16%));
+  transition: filter 0.4s ease;
 
   &:hover,
   &:focus-within {
@@ -33,6 +35,8 @@
 
 .companion-card__avatar {
   display: block;
+  transform: scale(1);
+  transition: transform 0.9s ease;
 
   @media (min-width: @tablet-width) {
     width: 285px;
@@ -43,7 +47,6 @@
 .companion-card:hover .companion-card__avatar,
 .companion-card:focus-within .companion-card__avatar {
   transform: scale(1.25);
-  transition: transform 0.9s ease;
 }
 
 .companion-card__info {
